--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -5,57 +5,81 @@ on:
       - master
 
 jobs:
-  terraform:
-    name: 'Terraform'
+  fmt:
+    name: 'terraform fmt'
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout'
         uses: actions/checkout@master
 
-      - name: Configure AWS Credentials
+      - name: 'Terraform Format'
+        uses: 'clouddrove/github-actions@v6.0'
+        with:
+          actions_subcommand: 'fmt'
+
+  multi-node:
+    name: 'multi-node'
+    needs: fmt
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: 'Checkout'
+        uses: actions/checkout@master
+
+      - name: 'Configure AWS Credentials'
         uses: clouddrove/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terraform Format'
-        uses: 'clouddrove/github-actions@v4.0'
-        with:
-          actions_subcommand: 'fmt'
-
-      - name: 'Terraform init Multi node'
-        uses: 'clouddrove/github-actions@v4.0'
+      - name: 'Terraform init multi-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/multi-node
 
-      - name: 'Terraform validate Multi node'
-        uses: 'clouddrove/github-actions@v4.0'
+      - name: 'Terraform validate multi-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/multi-node
 
-      - name: 'Terraform plan Multi node'
-        uses: 'clouddrove/github-actions@v4.0'
+      - name: 'Terraform plan multi-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/multi-node
 
-      - name: 'Terraform init Single'
-        uses: 'clouddrove/github-actions@v4.0'
+  single-node:
+    name: 'single-node'
+    needs: fmt
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@master
+
+      - name: 'Configure AWS Credentials'
+        uses: clouddrove/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.TEST_AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
+          aws-region: us-east-2
+
+      - name: 'Terraform init single-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'init'
           tf_actions_working_dir: ./_example/single-node
 
-      - name: 'Terraform validate Single'
-        uses: 'clouddrove/github-actions@v4.0'
+      - name: 'Terraform validate single-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'validate'
           tf_actions_working_dir: ./_example/single-node
 
-      - name: 'Terraform plan Single'
-        uses: 'clouddrove/github-actions@v4.0'
+      - name: 'Terraform plan single-node'
+        uses: 'clouddrove/github-actions@v6.0'
         with:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/single-node
