--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,6 +84,25 @@ jobs:
           actions_subcommand: 'plan'
           tf_actions_working_dir: ./_example/single-node
 
+  pre-commit:
+    name: 'Pre-Commit'
+    needs:
+      - fmt
+      - basic_example
+      - secure_example
+    runs-on: ubuntu-latest
+    steps:
+      - name: 'Checkout'
+        uses: actions/checkout@v2.3.4
+
+      - name: 'Install Tflint'
+        run: |
+          curl https://raw.githubusercontent.com/terraform-linters/tflint/master/install_linux.sh | bash
+
+      - name: 'Pre-Commit 🔎'
+        uses: pre-commit/action@v2.0.3
+        continue-on-error: true
+
       - name: 'Slack Notification'
         uses: clouddrove/action-slack@v2
         with:
