--- a/.github/workflows/terratest.yml
+++ b/.github/workflows/terratest.yml
@@ -21,23 +21,44 @@ jobs:
           aws-secret-access-key: ${{ secrets.TEST_AWS_ACCESS_SECRET_KEY }}
           aws-region: us-east-2
 
-      - name: 'Terratest single'
+      - name: 'Terratest for multi_node_non_vpc'
         if: ${{ github.event.label.name == 'terratest' }}
-        uses: 'clouddrove/github-actions@v7.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'terratest'
-          tf_actions_working_dir: '_test/single-node'
+          tf_actions_working_dir: '_test/multi_node_non_vpc'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: 'Terratest multi'
+      - name: 'Terratest for multi_node_vpc'
         if: ${{ github.event.label.name == 'terratest' }}
-        uses: 'clouddrove/github-actions@v7.0'
+        uses: 'clouddrove/github-actions@v8.0'
         with:
           actions_subcommand: 'terratest'
-          tf_actions_working_dir: '_test/multi-node'
+          tf_actions_working_dir: '_test/multi_node_vpc'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: 'Terratest for single_node_non_vpc'
+        if: ${{ github.event.label.name == 'terratest' }}
+        uses: 'clouddrove/github-actions@v8.0'
+        with:
+          actions_subcommand: 'terratest'
+          tf_actions_working_dir: '_test/single_node_non_vpc'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+      - name: 'Terratest for single_node_vpc'
+        if: ${{ github.event.label.name == 'terratest' }}
+        uses: 'clouddrove/github-actions@v8.0'
+        with:
+          actions_subcommand: 'terratest'
+          tf_actions_working_dir: '_test/single_node_vpc'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: 'Slack Notification'
         uses: clouddrove/action-slack@v2
