--- a/README.yaml
+++ b/README.yaml
@@ -8,7 +8,7 @@
 name: Terraform AWS Elasticsearch
 
 # License of this project
-license: "MIT"
+license: "APACHE"
 
 # Canonical GitHub repo
 github_repo: clouddrove/terraform-aws-elasticsearch
@@ -16,11 +16,17 @@ github_repo: clouddrove/terraform-aws-elasticsearch
 # Badges to display
 badges:
   - name: "Terraform"
-    image: "https://img.shields.io/badge/terraform-v0.15-green"
+    image: "https://img.shields.io/badge/terraform-v1.1.7-green"
     url: "https://www.terraform.io"
   - name: "Licence"
-    image: "https://img.shields.io/badge/License-MIT-blue.svg"
+    image: "https://img.shields.io/badge/License-APACHE-blue.svg"
     url: "LICENSE.md"
+  - name: "tfsec"
+    image: "https://github.com/clouddrove/terraform-aws-elasticsearch/actions/workflows/tfsec.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-elasticsearch/actions/workflows/tfsec.yml"
+  - name: "static-checks"
+    image: "https://github.com/clouddrove/terraform-aws-elasticsearch/actions/workflows/terraform.yml/badge.svg"
+    url: "https://github.com/clouddrove/terraform-aws-elasticsearch/actions/workflows/terraform.yml"
 
 #  description of this project
 description: |-
@@ -38,7 +44,7 @@ usage: |-
   ```hcl
     module "elasticsearch" {
     source      = "clouddrove/elasticsearch/aws"
-
+    
     name        = "es"
     environment = "test"
     label_order = ["name", "environment"]
