--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,11 +62,13 @@ jobs:
       - name: tflint
         uses: reviewdog/action-tflint@master
         with:
+          tflint_version: v0.29.0
           github_token: ${{ secrets.GITHUB }}
           working_directory: ${{ matrix.directory }}
           fail_on_error: 'true'
           filter_mode: 'nofilter'
           flags: '--module'
+
 
   format:
     name: Check code format
