--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,45 +1,12 @@
-name: Auto approve and merge PRs by dependabot
+---
+name: Auto merge
 on:
   pull_request:
-    types:
-      - synchronize
-      - opened
-      - reopened
-
-permissions:
-  contents: write
-  pull-requests: write
-
 jobs:
-  autoapprove:
-    name: Auto Approve a PR by dependabot 
-    runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]' && success() && github.event_name == 'pull_request'
-    steps:
-      - name: Approve a PR for Github Bot
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-
-      - name: Approve a PR for Anmol nagpal
-        run: gh pr review --approve "$PR_URL"
-        env:
-          PR_URL: ${{github.event.pull_request.html_url}}
-          GITHUB_TOKEN: ${{secrets.GITHUB}}
-
-  automerge:
-    runs-on: ubuntu-latest 
-    needs: autoapprove
-    steps:
-      - id: automerge
-        name: automerge
-        uses: pascalgn/automerge-action@v0.15.6
-        if: github.event_name == 'pull_request' && github.event.action == 'synchronize' && github.event.pull_request.draft == false && success()
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB }}
-          MERGE_FILTER_AUTHOR: 'dependabot[bot]'
-          MERGE_METHOD: "merge"
-          MERGE_DELETE_BRANCH: "true"
-          MERGE_LABELS: "dependencies"
-          MERGE_REQUIRED_APPROVALS: ""
+  auto-merge:
+    uses: clouddrove/github-shared-workflows/.github/workflows/auto_merge.yml@1.0.9
+    secrets:
+      GITHUB: ${{ secrets.GITHUB }}
+    with:
+      tfcheck: 'tf-checks-single_node_vpc-example / Evaluate Terraform versions (1.6.1, ./_example/single_node_vpc/)'
+...
