--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -8,5 +8,5 @@ jobs:
     secrets:
       GITHUB: ${{ secrets.GITHUB }}
     with:
-      tfcheck: 'tf-checks-single_node_vpc-example / Evaluate Terraform versions (1.6.1, ./_example/single_node_vpc/)'
+      tfcheck: 'tf-checks-multi_node_non_vpc-example / Check code format'
 ...
